# stream-patterns

./: Cargo.toml  LICENSE  README.md
fuzzer/: Cargo.toml
fuzzer/src/: lib.rs
src/: lib.rs  owned_close.rs  promise.rs  pub_impl.rs  pull_impl.rs  push_impl.rs  push_stream.rs  rep_impl.rs  req_impl.rs  sub_impl.rs
tests/: pub.rs  pull.rs  push.rs  rep.rs  req.rs
tests/common/: mod.rs  simple_channel.rs
