[workspace]
members = ["fuzzer"]

[package]
name = "stream-patterns"
version = "0.6.0"
edition = "2021"

[dependencies]
ruchei = { git = "https://github.com/parrrate/ruchei.git", rev = "0a9eee26b08b2ed4d5019c761e9ed4171f597384" }

async-channel = "1.9.0"
futures-util = { version = "0.3.30", features = [
    "sink",
    "std",
], default-features = false }

[dev-dependencies]
futures-channel = "0.3.30"
fuzzer.path = "fuzzer"
