[workspace]
members = ["fuzzer"]

[package]
name = "stream-patterns"
version = "0.6.0"
edition = "2021"

[dependencies]
ruchei = "0.0.72"

async-channel = "1.9.0"
futures-util = { version = "0.3.30", features = [
    "sink",
    "std",
], default-features = false }

[dev-dependencies]
futures-channel = "0.3.30"
fuzzer.path = "fuzzer"
