[package]
name = "fuzzer"
version = "0.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-channel = "1.9.0"
futures-util = { version = "0.3.29", features = [
    "sink",
    "std",
], default-features = false }
rand = "0.8.5"
